# X-Engine

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CONFIGURE_VS2022.bat  LICENSES.txt  README.md  SpaceGame.sln  TODO.md  TestProgram.cpp
.github/workflows/: windows-build.yaml
CMake/: BuildLuaJIT.cmake  CopyGameContent.cmake  FetchDeps.cmake  XENGINEConfig.cmake.in
Code/: Common.cmake  Engine.cmake  Game.cmake  Vendor.cmake
Code/Common/: DateTime.hpp  FileDialogs.cpp  FileDialogs.hpp  Filesystem.cpp  Filesystem.hpp  Macros.hpp  Memory.cpp  Memory.hpp  Panic.hpp  Platform.hpp  Result.hpp  Str.hpp  Templates.hpp  Timer.hpp  Typedefs.hpp  Types.hpp  WindowsHelpers.cpp  WindowsHelpers.hpp  XML.hpp
Code/Common/Platform/: FileDialogs.hpp
Code/Editor/: CMakeLists.txt  Controls.hpp  Editor.cpp  Editor.hpp  EditorIcons.h  EditorWindow.cpp  EditorWindow.hpp  FileDialogs.cpp  FileDialogs.hpp  PropertiesPanel.cpp  PropertiesPanel.hpp  TextureManager.cpp  TextureManager.hpp  main.cpp
Code/Engine/: ArenaAllocator.cpp  ArenaAllocator.hpp  AssetManager.cpp  AssetManager.hpp  BasicLitMaterial.cpp  BasicLitMaterial.hpp  BehaviorComponent.cpp  BehaviorComponent.hpp  BloomEffect.cpp  BloomEffect.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  CameraComponent.cpp  CameraComponent.hpp  Clock.cpp  Clock.hpp  Color.cpp  Color.hpp  ColorGradeEffect.cpp  ColorGradeEffect.hpp  ComponentManager.hpp  ComputeEffect.hpp  D3D.hpp  DebugUI.hpp  DeferredActionQueue.hpp  DevConsole.cpp  DevConsole.hpp  EngineCommon.hpp  EntityId.hpp  Event.hpp  EventEmitter.hpp  EventListener.hpp  FBXLoader.cpp  FBXLoader.hpp  Game.cpp  Game.hpp  GameState.hpp  GenericLoader.cpp  GenericLoader.hpp  (+82 more)
Code/Game/: CMakeLists.txt  CopyGameContent.cmake  GameWindow.cpp  GameWindow.hpp  main.cpp
Code/Tools/: CMakeLists.txt  Shared.cmake  img2c.c
Code/Tools/Img2C/: CMakeLists.txt  README.md  main.c
Code/Tools/ResPak/: CMakeLists.txt  README.md  main.cpp
Code/Tools/Shared/: FileDialogs.cpp  FileDialogs.hpp
Code/Tools/XEditor/: AssetBrowserIcons.h  AssetTypeIcons.h  CMakeLists.txt  Color.cpp  Color.hpp  Controls.cpp  Controls.hpp  EditorIcons.h  ImGuiHelpers.hpp  Logos.h  MeshPreviewer.cpp  MeshPreviewer.hpp  README.md  SceneEditor.cpp  SceneEditor.hpp  ShortcutManager.hpp  StartupScreen.cpp  StartupScreen.hpp  TextureManager.cpp  TextureManager.hpp  ToolbarIcons.h  Utilities.hpp  WelcomeScreenIcons.h  XEditor.cpp  XEditor.hpp  main.cpp
Code/Tools/XEditor/Res/: app.rc
Code/Tools/XEditor/Themes/: Dark.yaml  WeepMotor.yaml
Code/Tools/XPak/: AssetDescriptor.cpp  AssetDescriptor.hpp  AssetGenerator.cpp  AssetGenerator.hpp  CMakeLists.txt  Compression.cpp  Compression.hpp  IdGen.cpp  IdGen.hpp  ProjectDescriptor.cpp  ProjectDescriptor.hpp  README.md  ScriptCompiler.cpp  ScriptCompiler.hpp  XPak.cpp  XPak.hpp  main.cpp
Code/Tools/XSceneEditor/: CMakeLists.txt  SceneEditor.cpp  SceneEditor.hpp  main.cpp
Docs/: Developer-Console.md  Development-Log.md  Engine-Architecture.md  Engine-Architectutre.md
Engine/: Engine.vcxproj  Engine.vcxproj.filters  cpp.hint
Engine/Content/: Floor.glb  Metal_Roughness.dds  Monke.glb  checkerboard.dds
Engine/EngineContent/Models/: Sphere.glb
Engine/EngineContent/Textures/: Basic_Albedo.dds  Basic_Metallic.dds  Basic_Normal.dds  Basic_Roughness.dds
Engine/Shaders/: Unlit.hlsl  manifest.json
Engine/Shaders/Header/: BasicLit_PS.h  BasicLit_VS.h  ColorGrade_CS.h  Lit_PS.h  Lit_VS.h  OpaquePBR_PS.h  OpaquePBR_VS.h  Outline_PS.h  Outline_VS.h  PrimaryLit_PS.h  PrimaryLit_VS.h  ScreenTexture_PS.h  ScreenTexture_VS.h  ShadowPass_PS.h  ShadowPass_VS.h  Tonemap_CS.h  Water_PS.h  Water_VS.h
Engine/Shaders/Source/: BasicLit.hlsl  Bloom.hlsl  ColorGrade.hlsl  Common.hlsli  Constants.hlsli  Gizmo.hlsl  IO.hlsli  OpaquePBR.hlsl  PBRCommon.hlsli  PBR_TexMaps.hlsl  Phong.hlsl  Random.hlsli  ScreenTexture.hlsl  ShadowPass.hlsl  Tonemap.hlsl  Unlit.hlsl  ViewportOutline.hlsl  Water.hlsl
Game/: Game.vcxproj  Game.vcxproj.filters  SpaceGame.xproj  XEditorConfig.ini  imgui.ini
Game/Content/: BasicRoom.glb  BasicRoom.glb.xasset  BasicRoom.material  BasicRoom.material.xasset  BasicRoom.xasset  BongTris.glb.xasset  Diamond.glb.xasset  Floor.xasset  Floor.xmat  Gold_Albedo.dds.xasset  Gold_Albedo.xasset  Gold_Metallic.dds.xasset  Gold_Metallic.xasset  Gold_Normal.dds.xasset  Gold_Normal.xasset  Gold_Roughness.dds.xasset  Gold_Roughness.xasset  Metal_Albedo.dds.xasset  Metal_Albedo.xasset  Metal_Metallic.dds.xasset  Metal_Metallic.xasset  Metal_Normal.dds.xasset  Metal_Normal.xasset  Metal_Roughness.dds.xasset  Metal_Roughness.xasset  Monke.glb.xasset  Monke.material  Monke.material.xasset  Monke.scene.xasset  Monke.xasset  Monke.xmat  Monke.xscn  Monke00.scene.xasset  Monke2.scene.xasset  Monke3.scene.xasset  Monke4.scene.xasset  Monke6.scene.xasset  Monke7.scene.xasset  Monke_Material.xasset  Monke_Material.xmat  (+14 more)
Game/Content/Materials/: BasicRoom.material  Monke.material
Game/Content/Models/: BongTris.glb  Diamond.glb  OpenWheelCar.glb
Game/Content/Scenes/: Monke.scene  Monke00.scene  Monke2.scene  Monke3.scene  Monke4.scene  Monke6.scene  Monke7.scene  Water.scene  Water2.scene
Game/Materials/: Floor.xmat  Monke.xmat  Monke2.xmat
Game/Scenes/: Monke.xscn  XEditorConfig.ini  monke.json  monke.xscn  monke2.xscn
Game/Scripts/: CameraController.lua  SpinMonke.lua
Scripts/: CompileShaders.py  compile_shaders.py  configure_assimp.bat  configure_sol2.bat  create_project.py  install_libraries.py  regenerate_assets.sh
